--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,5 @@ sysinfo.txt
 Icon?
 ehthumbs.db
 Thumbs.db
+Balena to Sirus/Logs/AssetImportWorker0-prev.log
+Balena to Sirus/Logs/AssetImportWorker1-prev.log
