Health bar and Time bar

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,10 @@ ehthumbs.db
 Thumbs.db
 Balena to Sirus/Logs/AssetImportWorker0-prev.log
 Balena to Sirus/Logs/AssetImportWorker1-prev.log
+Balena to Sirus/Logs/shadercompiler-AssetImportWorker0.log
+Balena to Sirus/Logs/AssetImportWorker4.log
+Balena to Sirus/Logs/AssetImportWorker3.log
+Balena to Sirus/Logs/AssetImportWorker1.log
+Balena to Sirus/Logs/AssetImportWorker2.log
+Balena to Sirus/Logs/shadercompiler-AssetImportWorker0.log
+Balena to Sirus/Logs/shadercompiler-UnityShaderCompiler.exe0.log
